Bare minimum, email link.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,10 +7,19 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>👨‍🏫 Coaching by Sean Newell</title>
 	</head>
 	<body>
-		<h1>Astro</h1>
-		<p>Building in progress 😊</p>
+		<h1>Coaching</h1>
+		<p>If you'd lke one on one coaching in web technologies or leadership, email me an enquiry with the below link!</p>
+		<p>Topics and skills I can help develop:</p>
+		<ol>
+			<li>Typescript / Javascript</li>
+			<li>C# / .NET / .NET Core</li>
+			<li>PR / Code Review / Inspections</li>
+			<li>Leadership Mentoring</li>
+		</ol>
+
+		<h2><a href="mailto:sean@thenewells.us">Submit an enquiry via email</a></h2>
 	</body>
 </html>
