SEO and more content
Sprinkling in a few meta tags for them search engines, as
well as touching up the content a bit to be quickly descriptive
about the areas of web dev I can help with.

Mostly, again, just a bare minimum to get a sense of my 'area' of
expertise.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,22 +4,33 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👨‍🏫</text></svg>" />
+		<link rel="canonical" href="https://coach.sean.thenewells.us" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>👨‍🏫 Coaching by Sean Newell</title>
+		<title>Coaching by Sean Newell 👋</title>
+		<meta
+		  name="description"
+		  content="A Staff Engineer/Engineering Manager open to setting personalized one on one sessions to accelerate your career starting at at £100/hr. Web & Cloud Native."
+		/>
+		<meta name="robots" content="index" />
 	</head>
 	<body>
 		<h1>Coaching</h1>
 		<p>If you'd lke one on one coaching in web technologies or leadership, email me an enquiry with the below link!</p>
-		<p>Topics and skills I can help develop:</p>
+		<p>Topics and skills I can help with:</p>
 		<ol>
 			<li>Typescript / Javascript</li>
 			<li>C# / .NET / .NET Core</li>
+			<li>DevOps / CI / CD / Docker / K8s - Become a YAML Wrangler!</li>
+			<li>Agile, LEAN, anti-agile and breaking down methodologies to ship product to users and iterate.</li>
 			<li>PR / Code Review / Inspections</li>
 			<li>Leadership Mentoring</li>
+			<li>Leadership Therapy - need to talk through a tough issue? I've fired, hired, worked through consultations and layoffs, delivered projects on time, managed late projects, and everything in between.</li>
 		</ol>
-
 		<h2><a href="mailto:sean@thenewells.us">Submit an enquiry via email</a></h2>
+		<p>
+			Pricing is set at <em>£100 per hour</em> for general services. Student discounts available for assignment tutoring.
+		</p>
 	</body>
 </html>
