Clarify currencies I can accept, and include a wise link b/c why not

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,7 +30,8 @@
 		</ol>
 		<h2><a href="mailto:sean@thenewells.us">Submit an enquiry via email</a></h2>
 		<p>
-			Pricing is set at <em>£100 per hour</em> for general services. Student discounts available for assignment tutoring.
+			Pricing is set at <em>£100* per hour</em> for general services. Student discounts available for assignment tutoring.
 		</p>
+		<p><em>*Payment currency flexible - direct payments can be sent to my personal <a title="Get your own wise account with this sign up link!" href="https://wise.com/invite/ath/seann251" target="_blank">Wise Account</a> in USD/GBP/EUR.</em></p>
 	</body>
 </html>
