Added a theme and initial stylings
Nothing too fancy, just some quick colours
from colorhub.app and stylings, and emojis... ofc

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,36 +2,51 @@
 ---
 
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👨‍🏫</text></svg>" />
-		<link rel="canonical" href="https://coach.sean.thenewells.us" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Coaching by Sean Newell 👋</title>
-		<meta
-		  name="description"
-		  content="A Staff Engineer/Engineering Manager open to setting personalized one on one sessions to accelerate your career starting at at £100/hr. Web & Cloud Native."
-		/>
-		<meta name="robots" content="index" />
-	</head>
-	<body>
-		<h1>Coaching</h1>
-		<p>If you'd lke one on one coaching in web technologies or leadership, email me an enquiry with the below link!</p>
-		<p>Topics and skills I can help with:</p>
-		<ol>
-			<li>Typescript / Javascript</li>
-			<li>C# / .NET / .NET Core</li>
-			<li>DevOps / CI / CD / Docker / K8s - Become a YAML Wrangler!</li>
-			<li>Agile, LEAN, anti-agile and breaking down methodologies to ship product to users and iterate.</li>
-			<li>PR / Code Review / Inspections</li>
-			<li>Leadership Mentoring</li>
-			<li>Leadership Therapy - need to talk through a tough issue? I've fired, hired, worked through consultations and layoffs, delivered projects on time, managed late projects, and everything in between.</li>
-		</ol>
-		<h2><a href="mailto:sean@thenewells.us">Submit an enquiry via email</a></h2>
-		<p>
-			Pricing is set at <em>£100* per hour</em> for general services. Student discounts available for assignment tutoring.
-		</p>
-		<p><em>*Payment currency flexible - direct payments can be sent to my personal <a title="Get your own wise account with this sign up link!" href="https://wise.com/invite/ath/seann251" target="_blank">Wise Account</a> in USD/GBP/EUR.</em></p>
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👨‍🏫</text></svg>" />
+    <link rel="canonical" href="https://coach.sean.thenewells.us" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
+    <title>Coaching by Sean Newell 👋</title>
+    <meta
+      name="description"
+      content="A Staff Engineer/Engineering Manager open to setting personalized one on one sessions to accelerate your career starting at at £100/hr. Web & Cloud Native."
+    />
+    <meta name="robots" content="index" />
+  </head>
+  <body>
+    <section class="bg-dark text-light p-8">
+      <h1 class="text-4xl">Coaching</h1>
+      <p class="mt-4">If you'd lke one on one coaching in Web Dev, Typescript, React, C#/.NET, or Leadership click that link below to connect with me via email and let's set something up!</p>
+      <p class="mt-2">Topics and skills I can help with:</p>
+      <ol class="pl-6 list-disc">
+        <li>Typescript / Javascript - Become a TS Wizard 🧙‍♂️</li>
+        <li>React / SolidJS / Angular / UIs - Make browsers obey you 🎨</li>
+        <li>C# / .NET / .NET Core - Become a Master CSharper 🕴</li>
+        <li>DevOps / CI / CD / Docker / K8s - Become a YAML Wrangler 🤠</li>
+        <li>Agile / LEAN / Anti-agile - Move with confidence 💪</li>
+        <li>PR / Code Review / Inspections - Lift others up ✅</li>
+        <li>Leadership Mentoring - Grow into someone who can lead 🚀</li>
+        <li>Leadership Therapy - Lead your team with empathy and understanding 😌</li>
+      </ol>
+    </section>
+    <section class="p-8 grid w-full justify-center">
+      <div>
+        <span class="text-5xl mr-2">👉</span>
+        <div class="inline-block bg-brand rounded-lg self-center w-fit">
+          <h2 class="italic font-bold underline inline-block w-fit m-4 decoration-light text-3xl hover:decoration-dark">
+            <a href="mailto:sean@thenewells.us">Let's connect!</a>
+          </h2>
+        </div>
+        <span class="text-5xl ml-2">👈</span>
+      </div>
+    </section>
+    <section class="p-8">
+      <p class="">
+        Pricing is set at <em class="font-bold">£100* per hour</em> for general services. Student discounts available (limitations apply).
+      </p>
+      <p class="italic text-sm pl-4">*Payment currency flexible - direct payments can be sent to my personal <a title="Get your own wise account with this sign up link!" href="https://wise.com/invite/ath/seann251" target="_blank">Wise Account</a> in USD/GBP/EUR.</p>
+    </section>
+  </body>
 </html>
