Add bounce animation to the fingies on hover

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,14 +32,14 @@
       </ol>
     </section>
     <section class="p-8 grid w-full justify-center">
-      <div>
-        <span class="text-5xl mr-2">👉</span>
+      <div class="group">
+        <span class="inline-block text-5xl mr-3 group-hover:animate-bounce-right">👉</span>
         <div class="inline-block bg-brand rounded-lg self-center w-fit">
           <h2 class="italic font-bold underline inline-block w-fit m-4 decoration-light text-3xl hover:decoration-dark">
             <a href="mailto:sean@thenewells.us">Let's connect!</a>
           </h2>
         </div>
-        <span class="text-5xl ml-2">👈</span>
+        <span class="inline-block text-5xl ml-3 group-hover:animate-bounce-left">👈</span>
       </div>
     </section>
     <section class="p-8">
