Random tweak to compare CI

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -54,7 +54,7 @@
     </section>
     <section class="p-8">
       <p class="">
-        Pricing is set at <em class="font-bold">£100* per hour</em> for general services. Student discounts available (limitations apply).
+        Nominal pricing is <em class="font-bold">£100* per hour</em> for general services. Student discounts available.
       </p>
       <p class="italic text-sm pl-4">*Payment currency flexible - direct payments can be arranged over an agreed upon service, like <a class="text-dark underline" title="Get your own wise account with this sign up link!" href="https://wise.com/invite/ath/seann251" target="_blank">Wise</a>, in USD/GBP/EUR.</p>
     </section>
